--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==7.0.0
+appnope==0.1.0
 atomicwrites==1.3.0
 attrs==19.1.0
 backcall==0.1.0
@@ -14,19 +15,20 @@ ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.1
+jsonschema==3.0.2
 MarkupSafe==1.1.1
 more-itertools==7.2.0
 packaging==19.1
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
-pkg-resources==0.0.0
 pluggy==0.12.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 py==1.8.0
 Pygments==2.4.2
 pyparsing==2.4.2
+pyrsistent==0.15.4
 pytest==5.1.0
 pytest-cov==2.7.1
 pytz==2019.2
