--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,31 @@
 aniso8601==7.0.0
-appnope==0.1.0
 atomicwrites==1.3.0
 attrs==19.1.0
 backcall==0.1.0
+certifi==2019.9.11
+chardet==3.0.4
 Click==7.0
 coverage==4.5.4
 decorator==4.4.0
 Flask==1.1.1
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
+idna==2.8
 importlib-metadata==0.19
 ipython==7.7.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.15.1
-Jinja2==2.10.1
+Jinja2==2.10.3
 jsonschema==3.0.2
 MarkupSafe==1.1.1
+-e git+git@github.com:palokangas/menomeno.git@81e1ffedfe43684d5f3aee1c5a0b49a4772b31f0#egg=menomeno
 more-itertools==7.2.0
 packaging==19.1
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 pluggy==0.12.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
@@ -32,9 +36,12 @@ pyrsistent==0.15.4
 pytest==5.1.0
 pytest-cov==2.7.1
 pytz==2019.2
+requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.7
+tinytag==1.2.2
 traitlets==4.3.2
+urllib3==1.25.6
 wcwidth==0.1.7
 Werkzeug==0.15.5
 zipp==0.5.2
