--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Click==7.0
 coverage==4.5.4
 decorator==4.4.0
 Flask==1.1.1
+Flask-Cors==3.0.8
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 idna==2.8
